add query by lang